--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
     font-size: 1.25rem;
     border-radius: 10px;
     padding: 0.75rem 0 0.75rem 1.5rem;
+    box-shadow: 0px 12px 8px rgb(223, 223, 223);
 }
 
 #navBar {
@@ -96,6 +97,7 @@ h5 {
     border-radius: 8px;
     padding: 1rem  1.5rem 1rem 1.5rem;
     margin-bottom: .7rem;
+    box-shadow: 0px 12px 8px rgb(223, 223, 223);
     display: flex;
     justify-content: space-between;
 }
@@ -176,6 +178,7 @@ h3 {
     height: 3rem;
     border-radius: 10px;
     padding: 1rem 0rem 1rem 0.6rem;
+    box-shadow: 0px 12px 8px rgb(223, 223, 223);
 }
 
 .titleList > h1 {
@@ -240,5 +243,42 @@ ul > li {
     }
 
     #banner{
+        width: 23.5rem;
+        background-image: url(./assets/bannerArticleMobile.svg);
+        justify-content: center;
     }
+
+    .sectionSideCard {
+        padding: 1.5rem 0.5rem 0 .5rem;
+        margin: 0;
+        align-items: center;
+        display: grid;
+    }
+
+    .titleMain {
+        font-size: 1.2rem;
+        font-weight: 500;
+        width:24.5rem;
+        height: 2.5rem;
+        padding: 0.5rem 1rem .5rem 1rem;
+        margin: 1.5rem 0 1.6rem 0;
+    }
+
+    .titleMain, a  {
+        font-size: .8rem;
+        font-weight: 400;
+    }
+
+    .cards {
+        justify-content: center;
+    }
+
+    .cardPost {
+        justify-content: center;
+        width: 26.5rem;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
 }
