--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html {
 }
 
 body {
+    display: grid;
     margin: 0;
 }
 
@@ -251,8 +252,19 @@ ul > li {
     .sectionSideCard {
         padding: 1.5rem 0.5rem 0 .5rem;
         margin: 0;
-        align-items: center;
-        display: grid;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .posts {
+        font-size: 1.2rem;
+        font-weight: 700;
+        width:24.5rem;
+        height: 2.5rem;
+        padding: 0.5rem 1rem .5rem 1rem;
+        margin-bottom: 1.6rem;
+        text-align: center;
     }
 
     .titleMain {
@@ -269,9 +281,6 @@ ul > li {
         font-weight: 400;
     }
 
-    .cards {
-        justify-content: center;
-    }
 
     .cardPost {
         justify-content: center;
@@ -281,4 +290,23 @@ ul > li {
         flex-wrap: wrap;
     }
 
+    .cards {
+        width: 23rem;
+        align-items: center;
+    }
+    
+    .card {
+        width: 23rem;
+    }
+
+    .card > img {
+        width: 23rem;
+    }
+
+    .main {
+        width: 22.5rem;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 }
