--- a/style.css
+++ b/style.css
@@ -183,13 +183,13 @@ h3 {
     width: 22.4rem;
     height: 3rem;
     border-radius: 10px;
-    padding: 0.4rem 0rem 0.4rem 0.6rem;
+    padding: 0.1rem 0.6rem 0 0.6rem;
     box-shadow: 0px 12px 8px rgb(223, 223, 223);
 }
 
 .titleList > h1 {
     margin: 0;
-    transform: translateY(1vh);
+    transform: translateY(2vh);
 }
 
 #names {
@@ -349,9 +349,16 @@ ul > li {
 
     .cardNameAndNumber {
         width: 23rem;
+        margin-bottom: 1.5rem;
+    }
+
+    li {
+        font-weight: 600;
+        margin-bottom: 0.8rem;
     }
 
     .cardsList {
+        width: 23.5rem;
         order: 3;
     }
 
