--- a/style.css
+++ b/style.css
@@ -104,12 +104,13 @@ h5 {
     margin-bottom: .7rem;
     box-shadow: 0px 12px 8px rgb(223, 223, 223);
     display: flex;
+    justify-content: center;
+    align-items: center;
     justify-content: space-between;
 }
 
 .titleMain > h1 {
     margin: 0;
-    transform: translateY(1vh);
     font-size: 1.5rem;
 }
 
@@ -180,7 +181,9 @@ h3 {
 }
 
 .titleList{
-    width: 22.4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
     height: 3rem;
     border-radius: 10px;
     padding: 0.1rem 0.6rem 0 0.6rem;
@@ -188,8 +191,8 @@ h3 {
 }
 
 .titleList > h1 {
+    text-align: center;
     margin: 0;
-    transform: translateY(2vh);
 }
 
 #names {
